-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17, 18, 19, repo-loom
-
Component/s: hotspot
-
b24
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8293473 | 17.0.6-oracle | Fairoz Matte | P4 | Resolved | Fixed | b01 |
| JDK-8295484 | 17.0.6 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8293589 | 11.0.18-oracle | Fairoz Matte | P4 | Resolved | Fixed | b01 |
crashes with
#
Internal Error (/home/opc/jdk/open/src/hotspot/cpu/aarch64/macroAssembler_aarch64.cpp:4683), pid=3200679, tid=3200693
guarantee(zero_words_block_size < BlockZeroingLowLimit) failed: increase BlockZeroingLowLimit
#
- backported by
-
JDK-8293473 java -XX:BlockZeroingLowLimit=1 crashes after 8270947
-
- Resolved
-
-
JDK-8293589 java -XX:BlockZeroingLowLimit=1 crashes after 8270947
-
- Resolved
-
-
JDK-8295484 java -XX:BlockZeroingLowLimit=1 crashes after 8270947
-
- Resolved
-
- relates to
-
JDK-8270947 AArch64: C1: use zero_words to initialize all objects
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/75ce3744
-
Commit
openjdk/jdk/e17118aa
-
Review
openjdk/jdk11u-dev/1504
-
Review
openjdk/jdk17u-dev/798
-
Review
openjdk/jdk/8756