8272791: java -XX:BlockZeroingLowLimit=1 crashes after 8270947